syntax = "proto3";

option go_package = "grpc-go-demo/proto;proto";

package proto;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply);
  rpc GreetManyTimes(HelloRequest) returns (stream HelloReply);
  rpc LongGreet(stream HelloRequest) returns (HelloReply);
  rpc GreetEveryone(stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
